--- a/index.html
+++ b/index.html
@@ -2665,7 +2665,7 @@ Humane Medical Tourism by no means should be understood as facilitator for appro
 <figcaption class="col-sm-3 wow flipInX" data-wow-duration="1000ms" data-wow-delay="400ms">
 <h1>Logo</h1>
 <!--<h2>dfsgdfs</h2>-->
-<p>© Tejas and suryansh.<br> Health Care
+<p>suryansh.<br> Health Care
 </p>
 
 </figcaption>
